chore(kafka-tools): added basic routing and themeing

--- a/apps/kafka-tools/src/app/app.component.html
+++ b/apps/kafka-tools/src/app/app.component.html
@@ -1,1 +1,5 @@
-<img src="/assets/app-icon-dark.svg" />
+<!-- <img src="/assets/app-icon-dark.svg" /> -->
+<div class="dark-theme mat-app-background">
+    <button type="button" routerLink="/producer">producer</button>
+    <router-outlet></router-outlet>
+</div>
