--- a/apps/kafka-tools/src/styles.scss
+++ b/apps/kafka-tools/src/styles.scss
@@ -2,3 +2,12 @@ body {
     width: 100vw;
     height: 100vh;
 }
+
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
