--- a/apps/kafka-tools/src/app/app.component.html
+++ b/apps/kafka-tools/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!-- <img src="/assets/app-icon-dark.svg" /> -->
 <div class="dark-theme mat-app-background">
-    <button type="button" routerLink="/producer">producer</button>
+    <button mat-raised-button type="button" routerLink="/producer">
+        producer
+    </button>
     <router-outlet></router-outlet>
 </div>
