chore(kafka-tools): added some basic buttons

--- a/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.html
+++ b/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.html
@@ -1,1 +1,11 @@
-<p>window-controls works!</p>
+<div class="container">
+    <button mat-stroked-button>
+        <fa-icon [icon]="faSquare"></fa-icon>
+    </button>
+    <button mat-stroked-button>
+        <fa-icon [icon]="faMinus"></fa-icon>
+    </button>
+    <button mat-stroked-button>
+        <fa-icon [icon]="faXmark"></fa-icon>
+    </button>
+</div>
