--- a/apps/kafka-tools/src/app/app.component.html
+++ b/apps/kafka-tools/src/app/app.component.html
@@ -1,7 +1,5 @@
 <!-- <img src="/assets/app-icon-dark.svg" /> -->
 <div class="dark-theme mat-app-background">
-    <button mat-raised-button type="button" routerLink="/producer">
-        producer
-    </button>
+    <kafka-tools-window-controls></kafka-tools-window-controls>
     <router-outlet></router-outlet>
 </div>
