--- a/apps/kafka-tools/src/app/app.component.scss
+++ b/apps/kafka-tools/src/app/app.component.scss
@@ -2,11 +2,14 @@
     height: 100%;
     width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-flow: column;
 }
 
 img {
     margin: auto;
     height: 80vh;
+}
+
+kafka-tools-window-controls {
+    width: 100%;
 }
