--- a/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.scss
+++ b/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.scss
@@ -1,15 +1,35 @@
-.container {
-    display: flex;
-    justify-content: flex-end;
-    width: calc(100% - 1rem);
-    margin: 0.5rem;
-}
+@use 'sass:map';
+@use '@angular/material' as mat;
+@import '~@angular/material/theming';
+@import '~/src/_styles/theme.scss';
 
-:host {
+.container {
     width: 100%;
 }
 
 :host ::ng-deep button {
     min-width: 0;
     margin: 0 0.5rem;
+}
+
+// $palette: map-get($theme, background-color);
+
+// Get the color config from the theme.
+// $color-config: mat.get-color-config($palette);
+
+// Get the primary color palette from the color-config.
+// $warn-palette: map.get($color-config, 'primary');
+// :host ::ng-deep mat-stroked-button {
+
+.container {
+    display: flex;
+    justify-content: flex-end;
+    width: calc(100% - 1rem);
+    padding: 0.5rem;
+    @include theme(background, accent, lighten);
+}
+
+.close:hover {
+    transition: border-colo 0.25s ease-out, background 0.25s ease-out;
+    @include theme(background, warn);
 }
