chore(kafka-tools): hooked up the close button

--- a/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.html
+++ b/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.html
@@ -6,7 +6,7 @@
         <fa-icon [icon]="faSquare"></fa-icon>
     </button>
 
-    <button mat-stroked-button class="close" (click)="(close)">
+    <button mat-stroked-button class="close" (click)="close()">
         <fa-icon [icon]="faXmark"></fa-icon>
     </button>
 </div>
