chore(kafka-tools): added the logo to the title bar

--- a/apps/kafka-tools/src/_styles/themes/dark-theme.scss
+++ b/apps/kafka-tools/src/_styles/themes/dark-theme.scss
@@ -1,65 +1,4 @@
-/**
-* Generated theme by Material Theme Generator
-* https://materialtheme.arcsine.dev
-* Fork at: https://materialtheme.arcsine.dev/?c=YHBhbGV0dGU$YHByaW1hcnk$YF48IzQyMDBmZiIsIj9lcjwjYzZiM2ZmIiwiO2VyPCMyYjAwZmZ$LCIlPmBePCMwMDAwMDAiLCI~ZXI8I2IzYjNiMyIsIjtlcjwjMDAwMDAwfiwid2Fybj5gXjwjZmYwMDMyIiwiP2VyPCNmZmIzYzIiLCI7ZXI8I2ZmMDAxZn4sIj9UZXh0PCMwMDAwMDAiLCI~PTwjZmFmYWZhIiwiO1RleHQ8I2ZmZmZmZiIsIjs9PCMwZTBlMGV$LCJmb250cz5bYEA8KC00fixgQDwoLTN$LGBAPCgtMn4sYEA8KC0xfixgQDxoZWFkbGluZX4sYEA8dGl0bGV$LGBAPHN1YiktMn4sYEA8c3ViKS0xfixgQDxib2R5LTJ$LGBAPGJvZHktMX4sYEA8YnV0dG9ufixgQDxjYXB0aW9ufixgQDxpbnB1dCIsInNpemU$bnVsbH1dLCJpY29uczxGaWxsZWQiLCI~bmVzcz5mYWxzZSwidmVyc2lvbj4xM30=
-*/
-
-@use '@angular/material' as mat;
-
-@use 'sass:map';
-@import '~@angular/material/theming';
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
-
-$fontConfig: (
-    display-4:
-        mat.define-typography-level(112px, 112px, 300, 'Roboto', -0.0134em),
-    display-3: mat.define-typography-level(56px, 56px, 400, 'Roboto', -0.0089em),
-    display-2: mat.define-typography-level(45px, 48px, 400, 'Roboto', 0em),
-    display-1: mat.define-typography-level(34px, 40px, 400, 'Roboto', 0.0074em),
-    headline: mat.define-typography-level(24px, 32px, 400, 'Roboto', 0em),
-    title: mat.define-typography-level(20px, 32px, 500, 'Roboto', 0.0075em),
-    subheading-2:
-        mat.define-typography-level(16px, 28px, 400, 'Roboto', 0.0094em),
-    subheading-1:
-        mat.define-typography-level(15px, 24px, 500, 'Roboto', 0.0067em),
-    body-2: mat.define-typography-level(14px, 24px, 500, 'Roboto', 0.0179em),
-    body-1: mat.define-typography-level(14px, 20px, 400, 'Roboto', 0.0179em),
-    button: mat.define-typography-level(14px, 14px, 500, 'Roboto', 0.0893em),
-    caption: mat.define-typography-level(12px, 20px, 400, 'Roboto', 0.0333em),
-    input: mat.define-typography-level(inherit, 1.125, 400, 'Roboto', 1.5px),
-);
-
-// Foreground Elements
-
-// Light Theme Text
-$dark-text: #000000;
-$dark-primary-text: rgba($dark-text, 0.87);
-$dark-accent-text: rgba($dark-primary-text, 0.54);
-$dark-disabled-text: rgba($dark-primary-text, 0.38);
-$dark-dividers: rgba($dark-primary-text, 0.12);
-$dark-focused: rgba($dark-primary-text, 0.12);
-
-$mat-light-theme-foreground: (
-    base: black,
-    divider: $dark-dividers,
-    dividers: $dark-dividers,
-    disabled: $dark-disabled-text,
-    disabled-button: rgba($dark-text, 0.26),
-    disabled-text: $dark-disabled-text,
-    elevation: black,
-    secondary-text: $dark-accent-text,
-    hint-text: $dark-disabled-text,
-    accent-text: $dark-accent-text,
-    icon: $dark-accent-text,
-    icons: $dark-accent-text,
-    text: $dark-primary-text,
-    slider-min: $dark-primary-text,
-    slider-off: rgba($dark-text, 0.26),
-    slider-off-active: $dark-disabled-text,
-);
-
-// Dark Theme text
+/** -----------------------------------  Text ----------------------------------------- */
 $light-text: #ffffff;
 $light-primary-text: $light-text;
 $light-accent-text: rgba($light-primary-text, 0.7);
@@ -228,64 +167,3 @@ $darkTheme: (
     foreground: $mat-dark-theme-foreground,
     background: $mat-dark-theme-background,
 );
-
-$lightTheme: (
-    primary: $theme-primary,
-    accent: $theme-accent,
-    warn: $theme-warn,
-    is-dark: false,
-    foreground: $mat-light-theme-foreground,
-    background: $mat-light-theme-background,
-);
-
-.show-if-dark,
-.show-if-light {
-    display: none;
-}
-
-// Theme Init
-::ng-deep .light-theme {
-    @include mat.all-component-themes($lightTheme);
-
-    .show-if-light {
-        display: block;
-    }
-}
-::ng-deep .dark-theme {
-    @include mat.all-component-themes($darkTheme);
-
-    .show-if-dark {
-        display: block;
-    }
-}
-
-// Specific component overrides, pieces that are not in line with the general theming
-
-// Handle buttons appropriately, with respect to line-height
-.mat-raised-button,
-.mat-stroked-button,
-.mat-flat-button {
-    padding: 0 1.15em;
-    margin: 0 0.65em;
-    min-width: 3em;
-    line-height: 36.4px;
-}
-
-.mat-standard-chip {
-    padding: 0.5em 0.85em;
-    min-height: 2.5em;
-}
-
-@mixin theme($property: null, $key: null, $hue: darker) {
-    // Get the required color palette from the color-config.
-    ::ng-deep .light-theme & {
-        $color-config: mat.get-color-config($lightTheme);
-        $color-palette: map.get($color-config, $key);
-        #{$property}: mat.get-color-from-palette($color-palette, $hue);
-    }
-    ::ng-deep .dark-theme & {
-        $color-config: mat.get-color-config($darkTheme);
-        $color-palette: map.get($color-config, $key);
-        #{$property}: mat.get-color-from-palette($color-palette, $hue);
-    }
-}
