--- a/apps/kafka-tools/src/app/app.component.html
+++ b/apps/kafka-tools/src/app/app.component.html
@@ -1,5 +1,4 @@
-<!-- <img src="/assets/app-icon-dark.svg" /> -->
-<div class="dark-theme mat-app-background">
+<div class="dark-theme mat-app-background content">
     <kafka-tools-window-controls></kafka-tools-window-controls>
     <router-outlet></router-outlet>
 </div>
