--- a/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.html
+++ b/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.html
@@ -1,4 +1,17 @@
 <div class="container" data-tauri-drag-region>
+    <div class="left-side">
+        <img
+            class="show-if-dark"
+            src="/assets/app-icon-dark.svg"
+            alt="Kafka tools logo"
+        />
+        <img
+            class="show-if-light"
+            src="/assets/app-icon-light.svg"
+            alt="Kafka tools logo"
+        />
+        <span class="app-name">Kafka Tools</span>
+    </div>
     <button mat-stroked-button (click)="minimize()">
         <fa-icon [icon]="faMinus"></fa-icon>
     </button>
