--- a/apps/kafka-tools/src/app/app.component.scss
+++ b/apps/kafka-tools/src/app/app.component.scss
@@ -1,8 +1,13 @@
-:host > * {
+:host .content {
     height: 100%;
     width: 100%;
     display: flex;
     flex-flow: column;
+
+    & > ::ng-deep :nth-child(3) {
+        height: 100%;
+        display: block;
+    }
 }
 
 img {
