chore(kafka-tools): added a basic pallette

--- a/apps/kafka-tools/src/app/app.component.html
+++ b/apps/kafka-tools/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="dark-theme mat-app-background content">
+<div class="light-theme mat-app-background content">
     <kafka-tools-window-controls></kafka-tools-window-controls>
     <router-outlet></router-outlet>
 </div>
