--- a/apps/kafka-tools/src/app/features/producer/producer.component.html
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.html
@@ -1,1 +1,4 @@
-<p>producer works!</p>
+<div class="pallette">
+    <div class="display-color"></div>
+    <div class="color" *ngFor="let i of paletteArray"></div>
+</div>
