--- a/apps/kafka-tools/src/app/features/producer/producer.component.scss
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.scss
@@ -1,5 +1,99 @@
+@use 'sass:map';
+@import '~/src/_styles/themes/dark-theme.scss';
+
 :host {
     display: flex !important;
+    flex-flow: column;
     align-items: center;
     justify-content: center;
+    flex-direction: column-reverse;
 }
+
+.pallette {
+    display: flex;
+
+    .color,
+    .display-color {
+        width: 0.5rem;
+        height: 5rem;
+    }
+
+    .display-color {
+        margin-right: 3rem;
+        width: 5rem;
+        background: $dark-bg;
+        box-shadow: 2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+            6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+            12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+            22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+            41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+            100px 100px 80px rgba(0, 0, 0, 0.07);
+    }
+
+    @for $i from 0 through 50 {
+        .color:nth-child(#{$i}) {
+            background: map.get($dark-bg-lightens, 50 -$i);
+        }
+    }
+
+    @for $i from 0 through 50 {
+        .color:nth-child(#{$i + 51}) {
+            background: map.get($dark-bg-darkens, $i);
+        }
+    }
+}
+// div:nth-child(2) {
+//     background: $dark-bg-lighten-40;
+// }
+// div:nth-child(3) {
+//     background: $dark-bg-lighten-35;
+// }
+// div:nth-child(4) {
+//     background: $dark-bg-lighten-30;
+// }
+// div:nth-child(5) {
+//     background: $dark-bg-lighten-25;
+// }
+// div:nth-child(6) {
+//     background: $dark-bg-lighten-20;
+// }
+// div:nth-child(7) {
+//     background: $dark-bg-lighten-15;
+// }
+// div:nth-child(8) {
+//     background: $dark-bg-lighten-10;
+// }
+// div:nth-child(9) {
+//     background: $dark-bg-lighten-05;
+// }
+
+// div:nth-child(10) {
+//     background: $dark-bg-darken-05;
+// }
+// div:nth-child(11) {
+//     background: $dark-bg-darken-10;
+// }
+// div:nth-child(12) {
+//     background: $dark-bg-darken-15;
+// }
+// div:nth-child(13) {
+//     background: $dark-bg-darken-20;
+// }
+// div:nth-child(14) {
+//     background: $dark-bg-darken-25;
+// }
+// div:nth-child(15) {
+//     background: $dark-bg-darken-30;
+// }
+// div:nth-child(16) {
+//     background: $dark-bg-darken-35;
+// }
+// div:nth-child(17) {
+//     background: $dark-bg-darken-40;
+// }
+// div:nth-child(18) {
+//     background: $dark-bg-darken-45;
+// }
+// div:nth-child(19) {
+//     background: $dark-bg-darken-50;
+// }
