chore(kafka-tools): converted lightness and darkness to use scale

--- a/apps/kafka-tools/src/_styles/themes/dark-theme.scss
+++ b/apps/kafka-tools/src/_styles/themes/dark-theme.scss
@@ -13,8 +13,7 @@ $dark-disabled-text: rgba($dark-primary-text, 0.5);
 $dark-dividers: rgba($dark-primary-text, 0.12);
 $dark-focused: rgba($dark-primary-text, 0.12);
 
-$dark-bg: #5900ff;
-// $dark-background: #0e0e0e;
+$dark-bg: #0e0e0e;
 
 $dark-bh-get-alpha: alpha($dark-bg);
 // $dark-bg-alpha-05: $dark-bh-get-alpha(5);
