--- a/apps/kafka-tools/src/_styles/themes/theme-functions.scss
+++ b/apps/kafka-tools/src/_styles/themes/theme-functions.scss
@@ -1,4 +1,5 @@
 @use 'sass:map';
+@use 'sass:color';
 
 @function apply-alpha($base-color, $num) {
     @return rgba($base-color, $num / 100);
@@ -7,8 +8,12 @@
 @function get-lightens($base-color) {
     $lighten-map: ();
 
-    @for $i from 0 through 50 {
-        $lighten-map: map.set($lighten-map, $i, lighten($base-color, $i));
+    @for $i from 0 through 100 {
+        $lighten-map: map.set(
+            $lighten-map,
+            $i,
+            color.scale($base-color, $lightness: $i + 0%)
+        );
     }
     @return $lighten-map;
 }
@@ -16,8 +21,12 @@
 @function get-darkens($base-color) {
     $darkens-map: ();
 
-    @for $i from 0 through 50 {
-        $darkens-map: map.set($darkens-map, $i, darken($base-color, $i));
+    @for $i from 0 through 100 {
+        $darkens-map: map.set(
+            $darkens-map,
+            $i,
+            color.scale($base-color, $lightness: $i + -100%)
+        );
     }
     @return $darkens-map;
 }
