--- a/apps/kafka-tools/src/app/features/producer/producer.component.html
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.html
@@ -2,3 +2,31 @@
     <div class="display-color"></div>
     <div class="color" *ngFor="let i of paletteArray"></div>
 </div>
+<div class="pallette">
+    <div class="display-color"></div>
+    <div class="color" *ngFor="let i of paletteArray"></div>
+</div>
+<div class="pallette">
+    <div class="display-color"></div>
+    <div class="color" *ngFor="let i of paletteArray"></div>
+</div>
+<div class="pallette">
+    <div class="display-color"></div>
+    <div class="color" *ngFor="let i of paletteArray"></div>
+</div>
+<div class="pallette">
+    <div class="display-color"></div>
+    <div class="color" *ngFor="let i of paletteArray"></div>
+</div>
+<div class="pallette">
+    <div class="display-color"></div>
+    <div class="color" *ngFor="let i of paletteArray"></div>
+</div>
+<div class="pallette">
+    <div class="display-color"></div>
+    <div class="color" *ngFor="let i of paletteArray"></div>
+</div>
+<div class="pallette">
+    <div class="display-color"></div>
+    <div class="color" *ngFor="let i of paletteArray"></div>
+</div>
